monitoring/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: prometheus
  namespace: monitoring

spec:
  ingressClassName: traefik

  rules:
    - host: prometheus.psre.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
